<resources>
    <string name="app_name">Android</string>
    <string name="dummy">dummy</string>
    <string name="discard">Discard</string>
    <string name="upload">Upload</string>
    <string name="camera_settings">ƒ/4 16s ISO 200</string>
    <string name="settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="camera_value">Leica M Typ 240</string>
    <string name="singapore">Singapore</string>
    <string name="singapore_description">Singapore officially the Republic of Singapore, and often referred to as the Lion City, the Garden City, and the Red Dot, is a global city in Southeast Asia and the world\'s only island city-state. It lies one degree (137 km) north of the equator, at the southernmost tip of continental Asia and peninsular Malaysia, with Indonesia\'s Riau Islands to the south. Singapore\'s territory consists of the diamond-shaped main island and 62 islets.</string>


    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->
    <string name="pull_to_refresh_from_bottom_pull_label">正在加载更多…</string>
    <string name="pull_to_refresh_from_bottom_release_label">正在加载更多…</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">加载完成…</string>

    <string name="pull_to_refresh_pull_label">正在努力加载中…</string>
    <string name="pull_to_refresh_release_label">正在努力加载中…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入完成…</string>
    <string name="this_is_the_last_data">已经是最后一条数据</string>
    <string name="load_more_data">加载更多数据</string>
</resources>
